Fixed Edit/Delete/Delete Occurrence button spacing

--- a/packages/plugin/src/Resources/css/calendars/calendar.css
+++ b/packages/plugin/src/Resources/css/calendars/calendar.css
@@ -150,6 +150,7 @@
 }
 .qtip div.buttons a,
 .qtip div.buttons button {
+  margin-right: 5px;
   float: right !important;
   font-family: HelveticaNeue, sans-serif;
   font-size: 12px;
