--- a/packages/styles/src/shared/_qTipCraft.scss
+++ b/packages/styles/src/shared/_qTipCraft.scss
@@ -54,6 +54,7 @@
 
     a,
     button {
+      margin-right: 5px;
       float: right !important;
 
       font-family: HelveticaNeue, sans-serif;
